platforms/python/edn_format/runner/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     term -> CHAR
Rule 2     term -> STRING
Rule 3     term -> INTEGER
Rule 4     term -> FLOAT
Rule 5     term -> BOOLEAN
Rule 6     term -> NIL
Rule 7     term -> KEYWORD
Rule 8     term -> SYMBOL
Rule 9     term -> WHITESPACE
Rule 10    vector -> VECTOR_START expressions VECTOR_END
Rule 11    list -> LIST_START expressions LIST_END
Rule 12    set -> SET_START expressions MAP_OR_SET_END
Rule 13    map -> MAP_START expressions MAP_OR_SET_END
Rule 14    expressions -> expressions expression
Rule 15    expressions -> expression
Rule 16    expression -> vector
Rule 17    expression -> list
Rule 18    expression -> set
Rule 19    expression -> map
Rule 20    expression -> term
Rule 21    expression -> TAG expression

Terminals, with rules where they appear

BOOLEAN              : 5
CHAR                 : 1
FLOAT                : 4
INTEGER              : 3
KEYWORD              : 7
LIST_END             : 11
LIST_START           : 11
MAP_OR_SET_END       : 12 13
MAP_START            : 13
NIL                  : 6
SET_START            : 12
STRING               : 2
SYMBOL               : 8
TAG                  : 21
VECTOR_END           : 10
VECTOR_START         : 10
WHITESPACE           : 9
error                : 

Nonterminals, with rules where they appear

expression           : 14 15 21 0
expressions          : 10 11 12 13 14
list                 : 17
map                  : 19
set                  : 18
term                 : 20
vector               : 16

Parsing method: LALR

state 0

    (0) S' -> . expression
    (16) expression -> . vector
    (17) expression -> . list
    (18) expression -> . set
    (19) expression -> . map
    (20) expression -> . term
    (21) expression -> . TAG expression
    (10) vector -> . VECTOR_START expressions VECTOR_END
    (11) list -> . LIST_START expressions LIST_END
    (12) set -> . SET_START expressions MAP_OR_SET_END
    (13) map -> . MAP_START expressions MAP_OR_SET_END
    (1) term -> . CHAR
    (2) term -> . STRING
    (3) term -> . INTEGER
    (4) term -> . FLOAT
    (5) term -> . BOOLEAN
    (6) term -> . NIL
    (7) term -> . KEYWORD
    (8) term -> . SYMBOL
    (9) term -> . WHITESPACE

    TAG             shift and go to state 1
    VECTOR_START    shift and go to state 7
    LIST_START      shift and go to state 10
    SET_START       shift and go to state 6
    MAP_START       shift and go to state 19
    CHAR            shift and go to state 5
    STRING          shift and go to state 12
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 16
    BOOLEAN         shift and go to state 18
    NIL             shift and go to state 15
    KEYWORD         shift and go to state 3
    SYMBOL          shift and go to state 4
    WHITESPACE      shift and go to state 14

    map                            shift and go to state 11
    term                           shift and go to state 13
    set                            shift and go to state 2
    list                           shift and go to state 17
    vector                         shift and go to state 8
    expression                     shift and go to state 20

state 1

    (21) expression -> TAG . expression
    (16) expression -> . vector
    (17) expression -> . list
    (18) expression -> . set
    (19) expression -> . map
    (20) expression -> . term
    (21) expression -> . TAG expression
    (10) vector -> . VECTOR_START expressions VECTOR_END
    (11) list -> . LIST_START expressions LIST_END
    (12) set -> . SET_START expressions MAP_OR_SET_END
    (13) map -> . MAP_START expressions MAP_OR_SET_END
    (1) term -> . CHAR
    (2) term -> . STRING
    (3) term -> . INTEGER
    (4) term -> . FLOAT
    (5) term -> . BOOLEAN
    (6) term -> . NIL
    (7) term -> . KEYWORD
    (8) term -> . SYMBOL
    (9) term -> . WHITESPACE

    TAG             shift and go to state 1
    VECTOR_START    shift and go to state 7
    LIST_START      shift and go to state 10
    SET_START       shift and go to state 6
    MAP_START       shift and go to state 19
    CHAR            shift and go to state 5
    STRING          shift and go to state 12
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 16
    BOOLEAN         shift and go to state 18
    NIL             shift and go to state 15
    KEYWORD         shift and go to state 3
    SYMBOL          shift and go to state 4
    WHITESPACE      shift and go to state 14

    map                            shift and go to state 11
    term                           shift and go to state 13
    set                            shift and go to state 2
    list                           shift and go to state 17
    vector                         shift and go to state 8
    expression                     shift and go to state 21

state 2

    (18) expression -> set .

    MAP_OR_SET_END  reduce using rule 18 (expression -> set .)
    TAG             reduce using rule 18 (expression -> set .)
    VECTOR_START    reduce using rule 18 (expression -> set .)
    LIST_START      reduce using rule 18 (expression -> set .)
    SET_START       reduce using rule 18 (expression -> set .)
    MAP_START       reduce using rule 18 (expression -> set .)
    CHAR            reduce using rule 18 (expression -> set .)
    STRING          reduce using rule 18 (expression -> set .)
    INTEGER         reduce using rule 18 (expression -> set .)
    FLOAT           reduce using rule 18 (expression -> set .)
    BOOLEAN         reduce using rule 18 (expression -> set .)
    NIL             reduce using rule 18 (expression -> set .)
    KEYWORD         reduce using rule 18 (expression -> set .)
    SYMBOL          reduce using rule 18 (expression -> set .)
    WHITESPACE      reduce using rule 18 (expression -> set .)
    LIST_END        reduce using rule 18 (expression -> set .)
    $end            reduce using rule 18 (expression -> set .)
    VECTOR_END      reduce using rule 18 (expression -> set .)


state 3

    (7) term -> KEYWORD .

    MAP_OR_SET_END  reduce using rule 7 (term -> KEYWORD .)
    TAG             reduce using rule 7 (term -> KEYWORD .)
    VECTOR_START    reduce using rule 7 (term -> KEYWORD .)
    LIST_START      reduce using rule 7 (term -> KEYWORD .)
    SET_START       reduce using rule 7 (term -> KEYWORD .)
    MAP_START       reduce using rule 7 (term -> KEYWORD .)
    CHAR            reduce using rule 7 (term -> KEYWORD .)
    STRING          reduce using rule 7 (term -> KEYWORD .)
    INTEGER         reduce using rule 7 (term -> KEYWORD .)
    FLOAT           reduce using rule 7 (term -> KEYWORD .)
    BOOLEAN         reduce using rule 7 (term -> KEYWORD .)
    NIL             reduce using rule 7 (term -> KEYWORD .)
    KEYWORD         reduce using rule 7 (term -> KEYWORD .)
    SYMBOL          reduce using rule 7 (term -> KEYWORD .)
    WHITESPACE      reduce using rule 7 (term -> KEYWORD .)
    LIST_END        reduce using rule 7 (term -> KEYWORD .)
    $end            reduce using rule 7 (term -> KEYWORD .)
    VECTOR_END      reduce using rule 7 (term -> KEYWORD .)


state 4

    (8) term -> SYMBOL .

    MAP_OR_SET_END  reduce using rule 8 (term -> SYMBOL .)
    TAG             reduce using rule 8 (term -> SYMBOL .)
    VECTOR_START    reduce using rule 8 (term -> SYMBOL .)
    LIST_START      reduce using rule 8 (term -> SYMBOL .)
    SET_START       reduce using rule 8 (term -> SYMBOL .)
    MAP_START       reduce using rule 8 (term -> SYMBOL .)
    CHAR            reduce using rule 8 (term -> SYMBOL .)
    STRING          reduce using rule 8 (term -> SYMBOL .)
    INTEGER         reduce using rule 8 (term -> SYMBOL .)
    FLOAT           reduce using rule 8 (term -> SYMBOL .)
    BOOLEAN         reduce using rule 8 (term -> SYMBOL .)
    NIL             reduce using rule 8 (term -> SYMBOL .)
    KEYWORD         reduce using rule 8 (term -> SYMBOL .)
    SYMBOL          reduce using rule 8 (term -> SYMBOL .)
    WHITESPACE      reduce using rule 8 (term -> SYMBOL .)
    LIST_END        reduce using rule 8 (term -> SYMBOL .)
    $end            reduce using rule 8 (term -> SYMBOL .)
    VECTOR_END      reduce using rule 8 (term -> SYMBOL .)


state 5

    (1) term -> CHAR .

    MAP_OR_SET_END  reduce using rule 1 (term -> CHAR .)
    TAG             reduce using rule 1 (term -> CHAR .)
    VECTOR_START    reduce using rule 1 (term -> CHAR .)
    LIST_START      reduce using rule 1 (term -> CHAR .)
    SET_START       reduce using rule 1 (term -> CHAR .)
    MAP_START       reduce using rule 1 (term -> CHAR .)
    CHAR            reduce using rule 1 (term -> CHAR .)
    STRING          reduce using rule 1 (term -> CHAR .)
    INTEGER         reduce using rule 1 (term -> CHAR .)
    FLOAT           reduce using rule 1 (term -> CHAR .)
    BOOLEAN         reduce using rule 1 (term -> CHAR .)
    NIL             reduce using rule 1 (term -> CHAR .)
    KEYWORD         reduce using rule 1 (term -> CHAR .)
    SYMBOL          reduce using rule 1 (term -> CHAR .)
    WHITESPACE      reduce using rule 1 (term -> CHAR .)
    LIST_END        reduce using rule 1 (term -> CHAR .)
    $end            reduce using rule 1 (term -> CHAR .)
    VECTOR_END      reduce using rule 1 (term -> CHAR .)


state 6

    (12) set -> SET_START . expressions MAP_OR_SET_END
    (14) expressions -> . expressions expression
    (15) expressions -> . expression
    (16) expression -> . vector
    (17) expression -> . list
    (18) expression -> . set
    (19) expression -> . map
    (20) expression -> . term
    (21) expression -> . TAG expression
    (10) vector -> . VECTOR_START expressions VECTOR_END
    (11) list -> . LIST_START expressions LIST_END
    (12) set -> . SET_START expressions MAP_OR_SET_END
    (13) map -> . MAP_START expressions MAP_OR_SET_END
    (1) term -> . CHAR
    (2) term -> . STRING
    (3) term -> . INTEGER
    (4) term -> . FLOAT
    (5) term -> . BOOLEAN
    (6) term -> . NIL
    (7) term -> . KEYWORD
    (8) term -> . SYMBOL
    (9) term -> . WHITESPACE

    TAG             shift and go to state 1
    VECTOR_START    shift and go to state 7
    LIST_START      shift and go to state 10
    SET_START       shift and go to state 6
    MAP_START       shift and go to state 19
    CHAR            shift and go to state 5
    STRING          shift and go to state 12
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 16
    BOOLEAN         shift and go to state 18
    NIL             shift and go to state 15
    KEYWORD         shift and go to state 3
    SYMBOL          shift and go to state 4
    WHITESPACE      shift and go to state 14

    map                            shift and go to state 11
    term                           shift and go to state 13
    set                            shift and go to state 2
    list                           shift and go to state 17
    vector                         shift and go to state 8
    expressions                    shift and go to state 22
    expression                     shift and go to state 23

state 7

    (10) vector -> VECTOR_START . expressions VECTOR_END
    (14) expressions -> . expressions expression
    (15) expressions -> . expression
    (16) expression -> . vector
    (17) expression -> . list
    (18) expression -> . set
    (19) expression -> . map
    (20) expression -> . term
    (21) expression -> . TAG expression
    (10) vector -> . VECTOR_START expressions VECTOR_END
    (11) list -> . LIST_START expressions LIST_END
    (12) set -> . SET_START expressions MAP_OR_SET_END
    (13) map -> . MAP_START expressions MAP_OR_SET_END
    (1) term -> . CHAR
    (2) term -> . STRING
    (3) term -> . INTEGER
    (4) term -> . FLOAT
    (5) term -> . BOOLEAN
    (6) term -> . NIL
    (7) term -> . KEYWORD
    (8) term -> . SYMBOL
    (9) term -> . WHITESPACE

    TAG             shift and go to state 1
    VECTOR_START    shift and go to state 7
    LIST_START      shift and go to state 10
    SET_START       shift and go to state 6
    MAP_START       shift and go to state 19
    CHAR            shift and go to state 5
    STRING          shift and go to state 12
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 16
    BOOLEAN         shift and go to state 18
    NIL             shift and go to state 15
    KEYWORD         shift and go to state 3
    SYMBOL          shift and go to state 4
    WHITESPACE      shift and go to state 14

    map                            shift and go to state 11
    term                           shift and go to state 13
    set                            shift and go to state 2
    list                           shift and go to state 17
    vector                         shift and go to state 8
    expressions                    shift and go to state 24
    expression                     shift and go to state 23

state 8

    (16) expression -> vector .

    MAP_OR_SET_END  reduce using rule 16 (expression -> vector .)
    TAG             reduce using rule 16 (expression -> vector .)
    VECTOR_START    reduce using rule 16 (expression -> vector .)
    LIST_START      reduce using rule 16 (expression -> vector .)
    SET_START       reduce using rule 16 (expression -> vector .)
    MAP_START       reduce using rule 16 (expression -> vector .)
    CHAR            reduce using rule 16 (expression -> vector .)
    STRING          reduce using rule 16 (expression -> vector .)
    INTEGER         reduce using rule 16 (expression -> vector .)
    FLOAT           reduce using rule 16 (expression -> vector .)
    BOOLEAN         reduce using rule 16 (expression -> vector .)
    NIL             reduce using rule 16 (expression -> vector .)
    KEYWORD         reduce using rule 16 (expression -> vector .)
    SYMBOL          reduce using rule 16 (expression -> vector .)
    WHITESPACE      reduce using rule 16 (expression -> vector .)
    LIST_END        reduce using rule 16 (expression -> vector .)
    $end            reduce using rule 16 (expression -> vector .)
    VECTOR_END      reduce using rule 16 (expression -> vector .)


state 9

    (3) term -> INTEGER .

    MAP_OR_SET_END  reduce using rule 3 (term -> INTEGER .)
    TAG             reduce using rule 3 (term -> INTEGER .)
    VECTOR_START    reduce using rule 3 (term -> INTEGER .)
    LIST_START      reduce using rule 3 (term -> INTEGER .)
    SET_START       reduce using rule 3 (term -> INTEGER .)
    MAP_START       reduce using rule 3 (term -> INTEGER .)
    CHAR            reduce using rule 3 (term -> INTEGER .)
    STRING          reduce using rule 3 (term -> INTEGER .)
    INTEGER         reduce using rule 3 (term -> INTEGER .)
    FLOAT           reduce using rule 3 (term -> INTEGER .)
    BOOLEAN         reduce using rule 3 (term -> INTEGER .)
    NIL             reduce using rule 3 (term -> INTEGER .)
    KEYWORD         reduce using rule 3 (term -> INTEGER .)
    SYMBOL          reduce using rule 3 (term -> INTEGER .)
    WHITESPACE      reduce using rule 3 (term -> INTEGER .)
    LIST_END        reduce using rule 3 (term -> INTEGER .)
    $end            reduce using rule 3 (term -> INTEGER .)
    VECTOR_END      reduce using rule 3 (term -> INTEGER .)


state 10

    (11) list -> LIST_START . expressions LIST_END
    (14) expressions -> . expressions expression
    (15) expressions -> . expression
    (16) expression -> . vector
    (17) expression -> . list
    (18) expression -> . set
    (19) expression -> . map
    (20) expression -> . term
    (21) expression -> . TAG expression
    (10) vector -> . VECTOR_START expressions VECTOR_END
    (11) list -> . LIST_START expressions LIST_END
    (12) set -> . SET_START expressions MAP_OR_SET_END
    (13) map -> . MAP_START expressions MAP_OR_SET_END
    (1) term -> . CHAR
    (2) term -> . STRING
    (3) term -> . INTEGER
    (4) term -> . FLOAT
    (5) term -> . BOOLEAN
    (6) term -> . NIL
    (7) term -> . KEYWORD
    (8) term -> . SYMBOL
    (9) term -> . WHITESPACE

    TAG             shift and go to state 1
    VECTOR_START    shift and go to state 7
    LIST_START      shift and go to state 10
    SET_START       shift and go to state 6
    MAP_START       shift and go to state 19
    CHAR            shift and go to state 5
    STRING          shift and go to state 12
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 16
    BOOLEAN         shift and go to state 18
    NIL             shift and go to state 15
    KEYWORD         shift and go to state 3
    SYMBOL          shift and go to state 4
    WHITESPACE      shift and go to state 14

    map                            shift and go to state 11
    term                           shift and go to state 13
    set                            shift and go to state 2
    list                           shift and go to state 17
    vector                         shift and go to state 8
    expressions                    shift and go to state 25
    expression                     shift and go to state 23

state 11

    (19) expression -> map .

    MAP_OR_SET_END  reduce using rule 19 (expression -> map .)
    TAG             reduce using rule 19 (expression -> map .)
    VECTOR_START    reduce using rule 19 (expression -> map .)
    LIST_START      reduce using rule 19 (expression -> map .)
    SET_START       reduce using rule 19 (expression -> map .)
    MAP_START       reduce using rule 19 (expression -> map .)
    CHAR            reduce using rule 19 (expression -> map .)
    STRING          reduce using rule 19 (expression -> map .)
    INTEGER         reduce using rule 19 (expression -> map .)
    FLOAT           reduce using rule 19 (expression -> map .)
    BOOLEAN         reduce using rule 19 (expression -> map .)
    NIL             reduce using rule 19 (expression -> map .)
    KEYWORD         reduce using rule 19 (expression -> map .)
    SYMBOL          reduce using rule 19 (expression -> map .)
    WHITESPACE      reduce using rule 19 (expression -> map .)
    LIST_END        reduce using rule 19 (expression -> map .)
    $end            reduce using rule 19 (expression -> map .)
    VECTOR_END      reduce using rule 19 (expression -> map .)


state 12

    (2) term -> STRING .

    MAP_OR_SET_END  reduce using rule 2 (term -> STRING .)
    TAG             reduce using rule 2 (term -> STRING .)
    VECTOR_START    reduce using rule 2 (term -> STRING .)
    LIST_START      reduce using rule 2 (term -> STRING .)
    SET_START       reduce using rule 2 (term -> STRING .)
    MAP_START       reduce using rule 2 (term -> STRING .)
    CHAR            reduce using rule 2 (term -> STRING .)
    STRING          reduce using rule 2 (term -> STRING .)
    INTEGER         reduce using rule 2 (term -> STRING .)
    FLOAT           reduce using rule 2 (term -> STRING .)
    BOOLEAN         reduce using rule 2 (term -> STRING .)
    NIL             reduce using rule 2 (term -> STRING .)
    KEYWORD         reduce using rule 2 (term -> STRING .)
    SYMBOL          reduce using rule 2 (term -> STRING .)
    WHITESPACE      reduce using rule 2 (term -> STRING .)
    LIST_END        reduce using rule 2 (term -> STRING .)
    $end            reduce using rule 2 (term -> STRING .)
    VECTOR_END      reduce using rule 2 (term -> STRING .)


state 13

    (20) expression -> term .

    MAP_OR_SET_END  reduce using rule 20 (expression -> term .)
    TAG             reduce using rule 20 (expression -> term .)
    VECTOR_START    reduce using rule 20 (expression -> term .)
    LIST_START      reduce using rule 20 (expression -> term .)
    SET_START       reduce using rule 20 (expression -> term .)
    MAP_START       reduce using rule 20 (expression -> term .)
    CHAR            reduce using rule 20 (expression -> term .)
    STRING          reduce using rule 20 (expression -> term .)
    INTEGER         reduce using rule 20 (expression -> term .)
    FLOAT           reduce using rule 20 (expression -> term .)
    BOOLEAN         reduce using rule 20 (expression -> term .)
    NIL             reduce using rule 20 (expression -> term .)
    KEYWORD         reduce using rule 20 (expression -> term .)
    SYMBOL          reduce using rule 20 (expression -> term .)
    WHITESPACE      reduce using rule 20 (expression -> term .)
    LIST_END        reduce using rule 20 (expression -> term .)
    $end            reduce using rule 20 (expression -> term .)
    VECTOR_END      reduce using rule 20 (expression -> term .)


state 14

    (9) term -> WHITESPACE .

    MAP_OR_SET_END  reduce using rule 9 (term -> WHITESPACE .)
    TAG             reduce using rule 9 (term -> WHITESPACE .)
    VECTOR_START    reduce using rule 9 (term -> WHITESPACE .)
    LIST_START      reduce using rule 9 (term -> WHITESPACE .)
    SET_START       reduce using rule 9 (term -> WHITESPACE .)
    MAP_START       reduce using rule 9 (term -> WHITESPACE .)
    CHAR            reduce using rule 9 (term -> WHITESPACE .)
    STRING          reduce using rule 9 (term -> WHITESPACE .)
    INTEGER         reduce using rule 9 (term -> WHITESPACE .)
    FLOAT           reduce using rule 9 (term -> WHITESPACE .)
    BOOLEAN         reduce using rule 9 (term -> WHITESPACE .)
    NIL             reduce using rule 9 (term -> WHITESPACE .)
    KEYWORD         reduce using rule 9 (term -> WHITESPACE .)
    SYMBOL          reduce using rule 9 (term -> WHITESPACE .)
    WHITESPACE      reduce using rule 9 (term -> WHITESPACE .)
    LIST_END        reduce using rule 9 (term -> WHITESPACE .)
    $end            reduce using rule 9 (term -> WHITESPACE .)
    VECTOR_END      reduce using rule 9 (term -> WHITESPACE .)


state 15

    (6) term -> NIL .

    MAP_OR_SET_END  reduce using rule 6 (term -> NIL .)
    TAG             reduce using rule 6 (term -> NIL .)
    VECTOR_START    reduce using rule 6 (term -> NIL .)
    LIST_START      reduce using rule 6 (term -> NIL .)
    SET_START       reduce using rule 6 (term -> NIL .)
    MAP_START       reduce using rule 6 (term -> NIL .)
    CHAR            reduce using rule 6 (term -> NIL .)
    STRING          reduce using rule 6 (term -> NIL .)
    INTEGER         reduce using rule 6 (term -> NIL .)
    FLOAT           reduce using rule 6 (term -> NIL .)
    BOOLEAN         reduce using rule 6 (term -> NIL .)
    NIL             reduce using rule 6 (term -> NIL .)
    KEYWORD         reduce using rule 6 (term -> NIL .)
    SYMBOL          reduce using rule 6 (term -> NIL .)
    WHITESPACE      reduce using rule 6 (term -> NIL .)
    LIST_END        reduce using rule 6 (term -> NIL .)
    $end            reduce using rule 6 (term -> NIL .)
    VECTOR_END      reduce using rule 6 (term -> NIL .)


state 16

    (4) term -> FLOAT .

    MAP_OR_SET_END  reduce using rule 4 (term -> FLOAT .)
    TAG             reduce using rule 4 (term -> FLOAT .)
    VECTOR_START    reduce using rule 4 (term -> FLOAT .)
    LIST_START      reduce using rule 4 (term -> FLOAT .)
    SET_START       reduce using rule 4 (term -> FLOAT .)
    MAP_START       reduce using rule 4 (term -> FLOAT .)
    CHAR            reduce using rule 4 (term -> FLOAT .)
    STRING          reduce using rule 4 (term -> FLOAT .)
    INTEGER         reduce using rule 4 (term -> FLOAT .)
    FLOAT           reduce using rule 4 (term -> FLOAT .)
    BOOLEAN         reduce using rule 4 (term -> FLOAT .)
    NIL             reduce using rule 4 (term -> FLOAT .)
    KEYWORD         reduce using rule 4 (term -> FLOAT .)
    SYMBOL          reduce using rule 4 (term -> FLOAT .)
    WHITESPACE      reduce using rule 4 (term -> FLOAT .)
    LIST_END        reduce using rule 4 (term -> FLOAT .)
    $end            reduce using rule 4 (term -> FLOAT .)
    VECTOR_END      reduce using rule 4 (term -> FLOAT .)


state 17

    (17) expression -> list .

    MAP_OR_SET_END  reduce using rule 17 (expression -> list .)
    TAG             reduce using rule 17 (expression -> list .)
    VECTOR_START    reduce using rule 17 (expression -> list .)
    LIST_START      reduce using rule 17 (expression -> list .)
    SET_START       reduce using rule 17 (expression -> list .)
    MAP_START       reduce using rule 17 (expression -> list .)
    CHAR            reduce using rule 17 (expression -> list .)
    STRING          reduce using rule 17 (expression -> list .)
    INTEGER         reduce using rule 17 (expression -> list .)
    FLOAT           reduce using rule 17 (expression -> list .)
    BOOLEAN         reduce using rule 17 (expression -> list .)
    NIL             reduce using rule 17 (expression -> list .)
    KEYWORD         reduce using rule 17 (expression -> list .)
    SYMBOL          reduce using rule 17 (expression -> list .)
    WHITESPACE      reduce using rule 17 (expression -> list .)
    LIST_END        reduce using rule 17 (expression -> list .)
    $end            reduce using rule 17 (expression -> list .)
    VECTOR_END      reduce using rule 17 (expression -> list .)


state 18

    (5) term -> BOOLEAN .

    MAP_OR_SET_END  reduce using rule 5 (term -> BOOLEAN .)
    TAG             reduce using rule 5 (term -> BOOLEAN .)
    VECTOR_START    reduce using rule 5 (term -> BOOLEAN .)
    LIST_START      reduce using rule 5 (term -> BOOLEAN .)
    SET_START       reduce using rule 5 (term -> BOOLEAN .)
    MAP_START       reduce using rule 5 (term -> BOOLEAN .)
    CHAR            reduce using rule 5 (term -> BOOLEAN .)
    STRING          reduce using rule 5 (term -> BOOLEAN .)
    INTEGER         reduce using rule 5 (term -> BOOLEAN .)
    FLOAT           reduce using rule 5 (term -> BOOLEAN .)
    BOOLEAN         reduce using rule 5 (term -> BOOLEAN .)
    NIL             reduce using rule 5 (term -> BOOLEAN .)
    KEYWORD         reduce using rule 5 (term -> BOOLEAN .)
    SYMBOL          reduce using rule 5 (term -> BOOLEAN .)
    WHITESPACE      reduce using rule 5 (term -> BOOLEAN .)
    LIST_END        reduce using rule 5 (term -> BOOLEAN .)
    $end            reduce using rule 5 (term -> BOOLEAN .)
    VECTOR_END      reduce using rule 5 (term -> BOOLEAN .)


state 19

    (13) map -> MAP_START . expressions MAP_OR_SET_END
    (14) expressions -> . expressions expression
    (15) expressions -> . expression
    (16) expression -> . vector
    (17) expression -> . list
    (18) expression -> . set
    (19) expression -> . map
    (20) expression -> . term
    (21) expression -> . TAG expression
    (10) vector -> . VECTOR_START expressions VECTOR_END
    (11) list -> . LIST_START expressions LIST_END
    (12) set -> . SET_START expressions MAP_OR_SET_END
    (13) map -> . MAP_START expressions MAP_OR_SET_END
    (1) term -> . CHAR
    (2) term -> . STRING
    (3) term -> . INTEGER
    (4) term -> . FLOAT
    (5) term -> . BOOLEAN
    (6) term -> . NIL
    (7) term -> . KEYWORD
    (8) term -> . SYMBOL
    (9) term -> . WHITESPACE

    TAG             shift and go to state 1
    VECTOR_START    shift and go to state 7
    LIST_START      shift and go to state 10
    SET_START       shift and go to state 6
    MAP_START       shift and go to state 19
    CHAR            shift and go to state 5
    STRING          shift and go to state 12
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 16
    BOOLEAN         shift and go to state 18
    NIL             shift and go to state 15
    KEYWORD         shift and go to state 3
    SYMBOL          shift and go to state 4
    WHITESPACE      shift and go to state 14

    map                            shift and go to state 11
    term                           shift and go to state 13
    set                            shift and go to state 2
    list                           shift and go to state 17
    vector                         shift and go to state 8
    expressions                    shift and go to state 26
    expression                     shift and go to state 23

state 20

    (0) S' -> expression .



state 21

    (21) expression -> TAG expression .

    MAP_OR_SET_END  reduce using rule 21 (expression -> TAG expression .)
    TAG             reduce using rule 21 (expression -> TAG expression .)
    VECTOR_START    reduce using rule 21 (expression -> TAG expression .)
    LIST_START      reduce using rule 21 (expression -> TAG expression .)
    SET_START       reduce using rule 21 (expression -> TAG expression .)
    MAP_START       reduce using rule 21 (expression -> TAG expression .)
    CHAR            reduce using rule 21 (expression -> TAG expression .)
    STRING          reduce using rule 21 (expression -> TAG expression .)
    INTEGER         reduce using rule 21 (expression -> TAG expression .)
    FLOAT           reduce using rule 21 (expression -> TAG expression .)
    BOOLEAN         reduce using rule 21 (expression -> TAG expression .)
    NIL             reduce using rule 21 (expression -> TAG expression .)
    KEYWORD         reduce using rule 21 (expression -> TAG expression .)
    SYMBOL          reduce using rule 21 (expression -> TAG expression .)
    WHITESPACE      reduce using rule 21 (expression -> TAG expression .)
    LIST_END        reduce using rule 21 (expression -> TAG expression .)
    $end            reduce using rule 21 (expression -> TAG expression .)
    VECTOR_END      reduce using rule 21 (expression -> TAG expression .)


state 22

    (12) set -> SET_START expressions . MAP_OR_SET_END
    (14) expressions -> expressions . expression
    (16) expression -> . vector
    (17) expression -> . list
    (18) expression -> . set
    (19) expression -> . map
    (20) expression -> . term
    (21) expression -> . TAG expression
    (10) vector -> . VECTOR_START expressions VECTOR_END
    (11) list -> . LIST_START expressions LIST_END
    (12) set -> . SET_START expressions MAP_OR_SET_END
    (13) map -> . MAP_START expressions MAP_OR_SET_END
    (1) term -> . CHAR
    (2) term -> . STRING
    (3) term -> . INTEGER
    (4) term -> . FLOAT
    (5) term -> . BOOLEAN
    (6) term -> . NIL
    (7) term -> . KEYWORD
    (8) term -> . SYMBOL
    (9) term -> . WHITESPACE

    MAP_OR_SET_END  shift and go to state 27
    TAG             shift and go to state 1
    VECTOR_START    shift and go to state 7
    LIST_START      shift and go to state 10
    SET_START       shift and go to state 6
    MAP_START       shift and go to state 19
    CHAR            shift and go to state 5
    STRING          shift and go to state 12
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 16
    BOOLEAN         shift and go to state 18
    NIL             shift and go to state 15
    KEYWORD         shift and go to state 3
    SYMBOL          shift and go to state 4
    WHITESPACE      shift and go to state 14

    map                            shift and go to state 11
    term                           shift and go to state 13
    set                            shift and go to state 2
    list                           shift and go to state 17
    vector                         shift and go to state 8
    expression                     shift and go to state 28

state 23

    (15) expressions -> expression .

    LIST_END        reduce using rule 15 (expressions -> expression .)
    TAG             reduce using rule 15 (expressions -> expression .)
    VECTOR_START    reduce using rule 15 (expressions -> expression .)
    LIST_START      reduce using rule 15 (expressions -> expression .)
    SET_START       reduce using rule 15 (expressions -> expression .)
    MAP_START       reduce using rule 15 (expressions -> expression .)
    CHAR            reduce using rule 15 (expressions -> expression .)
    STRING          reduce using rule 15 (expressions -> expression .)
    INTEGER         reduce using rule 15 (expressions -> expression .)
    FLOAT           reduce using rule 15 (expressions -> expression .)
    BOOLEAN         reduce using rule 15 (expressions -> expression .)
    NIL             reduce using rule 15 (expressions -> expression .)
    KEYWORD         reduce using rule 15 (expressions -> expression .)
    SYMBOL          reduce using rule 15 (expressions -> expression .)
    WHITESPACE      reduce using rule 15 (expressions -> expression .)
    MAP_OR_SET_END  reduce using rule 15 (expressions -> expression .)
    VECTOR_END      reduce using rule 15 (expressions -> expression .)


state 24

    (10) vector -> VECTOR_START expressions . VECTOR_END
    (14) expressions -> expressions . expression
    (16) expression -> . vector
    (17) expression -> . list
    (18) expression -> . set
    (19) expression -> . map
    (20) expression -> . term
    (21) expression -> . TAG expression
    (10) vector -> . VECTOR_START expressions VECTOR_END
    (11) list -> . LIST_START expressions LIST_END
    (12) set -> . SET_START expressions MAP_OR_SET_END
    (13) map -> . MAP_START expressions MAP_OR_SET_END
    (1) term -> . CHAR
    (2) term -> . STRING
    (3) term -> . INTEGER
    (4) term -> . FLOAT
    (5) term -> . BOOLEAN
    (6) term -> . NIL
    (7) term -> . KEYWORD
    (8) term -> . SYMBOL
    (9) term -> . WHITESPACE

    VECTOR_END      shift and go to state 29
    TAG             shift and go to state 1
    VECTOR_START    shift and go to state 7
    LIST_START      shift and go to state 10
    SET_START       shift and go to state 6
    MAP_START       shift and go to state 19
    CHAR            shift and go to state 5
    STRING          shift and go to state 12
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 16
    BOOLEAN         shift and go to state 18
    NIL             shift and go to state 15
    KEYWORD         shift and go to state 3
    SYMBOL          shift and go to state 4
    WHITESPACE      shift and go to state 14

    map                            shift and go to state 11
    term                           shift and go to state 13
    set                            shift and go to state 2
    list                           shift and go to state 17
    vector                         shift and go to state 8
    expression                     shift and go to state 28

state 25

    (11) list -> LIST_START expressions . LIST_END
    (14) expressions -> expressions . expression
    (16) expression -> . vector
    (17) expression -> . list
    (18) expression -> . set
    (19) expression -> . map
    (20) expression -> . term
    (21) expression -> . TAG expression
    (10) vector -> . VECTOR_START expressions VECTOR_END
    (11) list -> . LIST_START expressions LIST_END
    (12) set -> . SET_START expressions MAP_OR_SET_END
    (13) map -> . MAP_START expressions MAP_OR_SET_END
    (1) term -> . CHAR
    (2) term -> . STRING
    (3) term -> . INTEGER
    (4) term -> . FLOAT
    (5) term -> . BOOLEAN
    (6) term -> . NIL
    (7) term -> . KEYWORD
    (8) term -> . SYMBOL
    (9) term -> . WHITESPACE
